# litecrypt

./: .bumpversion.cfg  .coverage  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  KEYS.db  LICENSE  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  pyproject.toml  ruff.toml  setup  setup.py  version.py
.github/workflows/: deploy.yaml
docker-build/: README.md  gen_compose.py
docs/: docs.md  index.html  index.md  installation.md
important/: minimal_requirements.txt  requirements.txt  setup.sh
installation/: index.html
litecrypt/: __init__.py  __main__.py  core.py  database.py  datacrypt.py  filecrypt.py
litecrypt/ORM/: main.py
litecrypt/core/: _base.py  base.py  crypt.py  datacrypt.py  filecrypt.py
litecrypt/core/helpers/: funcs.py
litecrypt/core/safepack/: gui.py  qr.py  replicas.py
litecrypt/mapper/: _definitions.py  _engines.py  _extras.py  _interfaces.py  _spawn.py  _types.py  consts.py  database.py  engines.py  extras.py  interfaces.py  models.py  test.py
litecrypt/safepack/: gui.py  replicas.py
litecrypt/utils/ORM/: main.py
litecrypt/utils/consts/: main.py
litecrypt/utils/exceptions/: __init__.py  dynamic.py  fixed.py
litecrypt/utils/safepack/: file.py  gui.py  qr.py  text.py
original/: file  file.txt
scripts/: clean  coverage  format  install  pre-push  test
scripts/ci/: poetry_setup
scripts/docker/: Dockerfile  README.md
scripts/docker-build/: Dockerfile  README.md  run_me.sh
scripts/setup/: README.md  minimal_requirements.txt  requirements.txt  setup.sh
search/: search_index.json
tests/: database_workflow.py  test_consts.py  test_core.py  test_data.py  test_files.py
tests/consts/: test_colors.py  test_crypto.py  test_gui.py  test_mapper.py
tests/crypt/: test_base.py  test_consts.py  test_data.py  test_files.py
tests/database/: test_workflow.py
tests/helpers/: test_bcrypt.py  test_blazingly_fast_kdf.py  test_crypt_embedded.py  test_parsers.py
tests/lab/: base.py  consts.py  main.py  tools.py
