[tool.poetry]
name = "litecrypt"
version = "0.2.6"
description = "Simplifying encryption"
authors = ["Ashref Gwader <AshrefGw@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^4.0.1"
cryptography = "^40.0.2"
qrcode = "^7.4.2"
ttkbootstrap = "^1.10.1"
SQLAlchemy = "^1.4.41"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
bumpversion = "^0.6.0"
pre-commit = "^3.3.3"
mypy = "^1.7.0"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.1.21"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
