[tool.poetry]
name = "litecrypt"
version = "0.3.0"
description = "Simplifying encryption"
authors = ["Ashref Gwader <AshrefGw@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^4.0.1"
cryptography = "40.0.2"
qrcode = "7.4.2"
ttkbootstrap = "1.10.1"
SQLAlchemy = "1.4.41"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
bumpversion = "^0.6.0"
pre-commit = "^3.3.3"
mypy = "^1.7.0"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.1.21"
mkdocs = "^1.5.3"
coverage = "^7.4.0"
ruff = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
pretty = true
show_error_codes = true
strict_optional = true
warn_unused_ignores = true
explicit_package_bases = true
exclude = [
    "tests",
    "venv"
]



[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

exclude = [
    "__init__.py",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501","E203","F541"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = 'tests'
filterwarnings = 'error'

[tool.coverage.run]
parallel = true
command_line = "-m pytest"
source = [
    "tests",
    "litecrypt"
]
disable_warnings = ["no-data-collected"]

[tool.coverage.report]
precision = 2
omit = [
    'litecrypt\safepack\*',
]

exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    'if MYPY:',
    '@overload',
]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]
